--- a/_layouts/reader.html
+++ b/_layouts/reader.html
@@ -145,8 +145,17 @@ layout: default
     document.documentElement.style.setProperty('--reader-text', s.text);
     const cat = mixColor(s.text, s.bg, 0.7);
     document.documentElement.style.setProperty('--category-color', cat);
-    const link = mixColor(s.text, s.bg, 0.4);
+
+    const title = name === 'olive'
+      ? '#d7c49e'
+      : mixColor(s.text, s.bg, 0.75);
+    document.documentElement.style.setProperty('--reader-title', title);
+
+    const link = name === 'olive'
+      ? '#9a6000'
+      : mixColor('#9a6000', s.text, 0.55);
     document.documentElement.style.setProperty('--reader-link', link);
+
     storageSet('readerScheme', name);
     updateIndicator('[data-scheme]', 'scheme', name);
   }
